--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -9,12 +9,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="We make short audio documentaries, written by academics, for the enjoyment of everyone else.">
+  <meta name="description" content="Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
   <meta property="og:title" content="Know It Wall" />
-  <meta property="og:description" content="If you have more interests than you can keep track of, you’re in the right place. Know It Wall makes short audio documentaries, written by academics, for the enjoyment of everyone." />
+  <meta property="og:description" content="Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity." />
   <meta property="og:url" content="http://knowitwall.com/" />
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
