Keep current annotation visible if highlight is clicked

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -36,6 +36,7 @@
 
   <!-- annotator -->
   <link href="/static/css/annotator-KIW.css" rel="stylesheet" type="text/css">
+  <link href="/static/css/annotator-extensions.css" rel="stylesheet" type="text/css">
 
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -543,6 +544,7 @@
 
   <!-- annotator.js -->
   <script src="/static/js/annotator-full-1.2.7-modified.js"></script>
+  <script src="/static/js/annotator-extensions.js"></script>
 
 </script>
 
