Show annotation on right side for larger screens Find and replace text URLs with hyperlinks.

--- a/app/static/css/annotator-extensions.css
+++ b/app/static/css/annotator-extensions.css
@@ -5,3 +5,6 @@
     display: block !important;
     visibility: visible !important;
 }
+.annotator-widget::after {
+    background-image: initial;
+}
