--- a/app/static/css/circular_player.css
+++ b/app/static/css/circular_player.css
@@ -1,21 +1,7 @@
-/* Font Awesome */
-/*@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);*/
-
-/* Roboto Condensed */
-/*@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300);*/
-
-/* Basic */
-/**, *:before, *:after { box-sizing: border-box; }
-body { margin: 0; min-height: 100%; background: #222; font-family: 'Roboto Condensed', sans-serif; font-weight: 300; }
-a { color: #000; text-decoration: none; }
-a:hover { color: #26C5dB; }
-p { margin: 0; }
-.credits { position: absolute; left: 20px; bottom: 20px; color: #ccc; font-size: 14px; }
-.credits a  { color: #26C5CB; }*/
 
 /* Centering */
-#circular-container, #circular-progress, #circular-player, #flip-back, .circular-cover, .playlist {
-	  /*position: absolute;*/
+#circular_container, #circular_progress, #circular_player, #flip-back, .circular_cover, .playlist {
+	  position: absolute;
 	  margin: auto;
 	  top: 0;
 	  left: 0;
@@ -23,7 +9,7 @@ p { margin: 0; }
   	bottom: 0;
 }
 
-#circular-container {
+#circular_container {
 	  width: 320px;
 	  height: 320px;
   perspective: 550px;
@@ -32,7 +18,7 @@ p { margin: 0; }
 	  -webkit-transform-style: preserve-3d;
 }
 
-#circular-player {
+#circular_player {
   	width: 300px;
 	  height: 300px;
 	  background: #f333;
@@ -42,17 +28,14 @@ p { margin: 0; }
 	  z-index: 300;
 }
 
-#circular-progress {
+#circular_progress {
 	  width: 320px;
 	  height: 320px;
 	  z-index: 200;
-  transform: rotate(147deg);
-	  -webkit-transform: rotate(147deg);
-		/* makes the progress bar blurry */
-  /*filter: blur(1px);
+  filter: blur(1px);
 	  -webkit-filter: blur(1px);
 	  transition: all .5s ease-in-out;
-	  -webkit-transition: all .5s ease-in-out;*/
+	  -webkit-transition: all .5s ease-in-out;
 }
 
 #flip-back {
@@ -67,7 +50,7 @@ p { margin: 0; }
 	  -webkit-transform: rotateY(-180deg);
 }
 
-/* Album Cover */
+/* Image */
 img {
   	width: 100%;
 	  height: 100%;
@@ -78,31 +61,31 @@ img {
 }
 
 /* Fade */
-/*#circular-container:hover .circular-cover,
-#circular-container:hover .to-lyrics-label,
-#circular-container:hover .to-back-label {
+#circular_container:hover .circular_cover,
+#circular_container:hover .to-lyrics-label,
+#circular_container:hover .to-back-label {
 	  opacity: .9;
-}*/
+}
 
-.circular-cover,
+.circular_cover,
 .to-lyrics-label,
 .to-back-label {
-	  opacity: .3;
+	  opacity: .8;
 	  transition: all .3s ease-in-out;
 	  -webkit-transition: all .3s ease-in-out;
 }
 
 /* Player Buttons */
-.circular-controls {
+.circular_controls {
 	  position: relative;
 	  width: 100%;
-	  color: #fff;
+	  color: #ffc21c;
 	  text-align: center;
 }
 
 button {
 	  margin: 10px;
-	  color: #fff;
+	  color: #ffc21c;
 	  background: transparent;
 	  border: 0;
 	  outline: 0;
@@ -114,7 +97,8 @@ button {
 }
 
 button:hover {
-	  color: #26C5CB;
+	color: #ffc21c;
+	  /*color: #26C5CB;*/
 }
 
 #play-pause {
@@ -122,7 +106,16 @@ button:hover {
 	  height: 46px;
 	  transition: all .5s ease-in-out;
 	  -webkit-transition: all .5s ease-in-out;
+		font-size: 1.3em;
 	}
+#forward, #backward {
+	font-size: 1.3em;
+}
+
+#remaining {
+	font-size: 20px;
+	font-weight: bold;
+}
 
 /* Song Info */
 .info {
@@ -227,7 +220,7 @@ label.to-lyrics-label {
 }
 
 /* Flip Back */
-#circular-player, #flip-back {
+#circular_player, #flip-back {
 	  backface-visibility: hidden;
 	  -webkit-backface-visibility: hidden;
 	  transition: transform .5s ease-in-out;
@@ -240,13 +233,13 @@ label.to-lyrics-label {
 	  -webkit-transform: rotateY(0deg);
 }
 
-#to-back:checked ~ #circular-player {
+#to-back:checked ~ #circular_player {
 	  z-index: -1;
   transform: rotateY(180deg);
 	  -webkit-transform: rotateY(180deg);
 }
 
-#to-back:checked ~ #circular-progress {
+#to-back:checked ~ #circular_progress {
 	  opacity: 0;
   transform: rotate(0);
 	  -webkit-transform: rotate(0);
@@ -290,21 +283,21 @@ label.to-lyrics-label {
 	  text-shadow: 1px 1px 3px #000;
 }
 
-.circular-cover {
+.circular_cover {
 	  padding-top: 130px;
 	  transition: all .5s ease-in-out;
 	  -webkit-transition: all .5s ease-in-out;
 }
 
-#to-lyrics:checked ~ .circular-cover {
+#to-lyrics:checked ~ .circular_cover {
 	  padding-top: 40px;
 }
 
-#to-lyrics:checked ~ .circular-cover .lyrics {
+#to-lyrics:checked ~ .circular_cover .lyrics {
 	  margin-top: 0px;
 }
 
-#to-lyrics:checked ~ .circular-cover button {
+#to-lyrics:checked ~ .circular_cover button {
 	  margin: 4px;
 }
 
@@ -349,10 +342,10 @@ label.to-lyrics-label {
 
 /* Media Queries */
 @media all and (max-width: 768px) {
-	  #circular-container, #circular-player { width: 150px; height: 150px;}
-	  #circular-progress { width: 160px; height: 160px; margin-top: -5px; margin-left: -5px; }
+	  #circular_container, #circular_player { width: 150px; height: 150px;}
+	  #circular_progress { width: 160px; height: 160px; margin-top: -5px; margin-left: -5px; }
 	  label, .lyrics, .scroll { display: none; }
-	  .circular-cover { padding-top: 46px; }
+	  .circular_cover { padding-top: 46px; }
 	  button { margin: 4px; }
 	  button:first-of-type, button:last-of-type { display: none; }
 	  input[type='range'] { display: block; margin-top: -76px; height: 1px; }
