--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -392,52 +392,35 @@ text-align: left;
   header .container {
   padding-top: 150px;
   padding-bottom: 150px;
-
-
 }
-
 }
 
 /*--ABOUT--*/
-
 #about-left {
-
     text-align:right;
     font-size:1.5em;
     margin-top:50px;
     margin-bottom:50px;
     padding-right:40px;
 }
-
  @media(max-width:768px) {
 #about-left {
-
- font-size: 1em
-
+ font-size: 1em;
 }
 }
-
-
-
 .comments-button {
-
     width:90%;
     margin-right: auto;
     margin-left:auto;
     text-align: center;
-
 }
-
 .transcript-button {
     width:90%;
     margin-right: auto;
     margin-left:auto;
     margin-top: 20px;
-
 }
-
 .btn-info:focus {
-
   color: #464655;
   background-color: #FFFFFF;
   border-color: #454654;
@@ -468,16 +451,12 @@ text-align: left;
 
 @media(max-width:768px) {
 #contribute-left {
-
-
     font-size:1em;
     margin-top:0px;
-
 }
 }
 
 .episode-title {
-
   font-size:3em;
   font-family: 'Lato';
   font-weight: 300;
@@ -540,12 +519,8 @@ text-align: left;
 
 @media(max-width:768px) {
 .contact-title {
-
   font-size: 1em;
   width:100%;
-
-
-
 }
 }
 
@@ -647,35 +622,27 @@ padding:40px;
         padding-top: 300px;
         padding-bottom: 360px;
     }
-
     header .intro-text .name {
         font-size: 4.75em;
     }
-
     header .intro-text .skills {
         font-size: 1.75em;
     }
 }
-
 @media(min-width:768px) {
-
-
 /* this says how  the nav bar transition happens, but not when */
-
     .navbar-fixed-top {
         padding: 25px 0;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
     }
-
     .navbar-fixed-top .navbar-brand {
         font-size: 2em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
     }
-
     @media (max-width: 991px) {
 .navbar-fixed-top .navbar-brand {
   font-size: 1.5em;
@@ -1004,11 +971,12 @@ footer .footer-below {
     color: #44F;
 }
 
-audio, canvas, progress, video {
+/*This affected the circular player (don't what why this is here anyways..)*/
+/*audio, canvas, progress, video {
   display: inline-block;
   vertical-align: baseline;
   max-height: 150px;
-}
+}*/
 
 .top-border-ireg {
 
