--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -20,13 +20,13 @@
 
   <title>Know it Wall</title>
 
-  <!-- <link href="/static/css/audioplayer.css" rel="stylesheet"> -->
+  <link href="/static/css/audioplayer.css" rel="stylesheet">
 
-  <link href="/static/css/circular_player.css" rel="stylesheet">
 
   <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- <link href="/static/css/circular_player.css" rel="stylesheet"> -->
   <!-- Custom CSS -->
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
 
@@ -342,7 +342,7 @@
     </div>
     <div class="container previous-audiodoc">
       <div class="row">
-        <div class="col-lg-10 col-lg-offset-1 text-center" style="padding-bottom: 20px;">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
           <p style="font-size:1.6em;">{{audiodocs[0].topic_description | safe}}</p>
           <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
           <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
@@ -350,32 +350,12 @@
       </div>
 
       <div class="row">
-        <!-- <div class="col-lg-12"> -->
-          <!-- <audio controls id="author">
+        <div class="col-lg-12">
+          <audio controls id="author">
             <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
             Your browser does not support the audio element.
-          </audio> -->
-          <div id="circular_container">
-          <canvas id="circular_progress" width="320" height="320"></canvas>
-          <div id="circular_player">
-            <audio id="circular_audio">
-              <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg" codecs="mp3"></source>
-            </audio>
-            <img src="{{ audiodocs[0].topic_image }}">
-            <div class="circular_cover">
-              <div class="circular_controls">
-                <!-- <button id="backward" title="Backward"><i class="fa fa-retweet fa-lg"></i></button> -->
-                <button id="backward" title="Backward" onclick="resetPlayer()"><i class="fa fa-backward fa-2x"></i></button>
-                <button id="play-pause" title="Play" onclick="togglePlayPause()"><i class="fa fa-play fa-3x"></i></button>
-                <button id="forward" title="Forward" onclick="setLocation()"><i class="fa fa-forward fa-2x"></i></button>
-                <!-- <button id="backward" title="Backward"><i class="fa fa-random fa-lg"></i></button> -->
-                <input id="volume" name="volume" min="0" max="1" step="0.1" type="range" onchange="setVolume()" />
-                <div id="remaining"></div>
-              </div>
-            </div>
-          </div>
-          </div>
-        <!-- </div> -->
+          </audio>
+        </div>
       </div>
 
       <div class="row">
@@ -396,7 +376,6 @@
               </div>
             </div>
           </div>
-        <!-- </div> -->
         </div>
 
         <div class="col-md-12" id="read">
@@ -523,8 +502,8 @@
   <script src="/static/js/knowitwall.js"></script>
 
 
-  <!-- <script src="/static/js/audioplayer.js"></script> -->
-  <script src="/static/js/circular_player.js"></script>
+  <script src="/static/js/audioplayer.js"></script>
+  <!-- <script src="/static/js/circular_player.js"></script> -->
 
 
   <!-- Sharethis.com: to make the social media buttons work -->
