circular player on test page: starts at the top, and progress background is grey

--- a/app/static/css/circular_player.css
+++ b/app/static/css/circular_player.css
@@ -110,6 +110,8 @@ button:hover {
 	  transition: all .5s ease-in-out;
 	  -webkit-transition: all .5s ease-in-out;
 		font-size: 1.3em;
+		position: relative;
+		right: 8px;
 	}
 #forward, #backward {
 	font-size: 1.3em;
