circular test: image in background now the box image (cuz smaller)

--- a/app/templates/circular_audiodoc.html
+++ b/app/templates/circular_audiodoc.html
@@ -362,7 +362,7 @@
             <audio id="circular_audio">
               <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg" codecs="mp3"></source>
             </audio>
-            <img src="{{ audiodocs[0].topic_image }}">
+            <img src="{{ audiodocs[0].topic_image_box }}">
             <div class="circular_cover">
               <div class="circular_controls">
 
