--- a/app/templates/circular_audiodoc.html
+++ b/app/templates/circular_audiodoc.html
@@ -21,25 +21,15 @@
   <title>Know it Wall</title>
 
   <!-- <link href="/static/css/audioplayer.css" rel="stylesheet"> -->
-
-
-  <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-
   <link href="/static/css/circular_player.css" rel="stylesheet">
-  <!-- Custom CSS -->
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
-
-  <!-- audioddoc css  -->
   <link href="/static/css/audiodoc_page.css" rel="stylesheet">
-
 
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
   <link href="http://fonts.googleapis.com/css?family=Lato:100,300,300italic,400,400italic" rel="stylesheet" type="text/css">
-
-
 
 </head>
 
@@ -350,8 +340,14 @@
       </div>
 
       <div class="row" style="position: relative; height: 300px;">
-        <div class="col-lg-12">
-          <!-- <audio controls id="author">
+        <div id="audio_source_mp3" style="display:none">
+          {{audiodocs[0].audio_mp3}}
+        </div>
+        <div id="switching_audioplayers" class="col-lg-12">
+
+          <!-- <script src="/static/js/switching_audioplayers.js"></script> -->
+
+          <!-- <audio controls id="author" >
             <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio> -->
@@ -365,10 +361,7 @@
             <img src="{{ audiodocs[0].topic_image_box }}">
             <div class="circular_cover">
               <div class="circular_controls">
-
-                <!-- <button id="backward" title="Backward" onclick="resetPlayer()"><i class="fa fa-backward fa-2x"></i></button> -->
                 <button id="play-pause" title="Play" onclick="togglePlayPause()"><i class="fa fa-play fa-3x"></i></button>
-                <!-- <button id="forward" title="Forward" onclick="setLocation()"><i class="fa fa-forward fa-2x"></i></button> -->
                 <input id="volume" name="volume" min="0" max="1" step="0.1" type="range" onchange="setVolume()" />
                 <div id="remaining"></div>
               </div>
@@ -500,41 +493,16 @@
     </a>
   </div>
 
-
-<!-- scripts! -->
-
-  <!-- jQuery -->
   <script src="/static/js/jquery.js"></script>
-
-  <!-- Bootstrap Core JavaScript -->
   <script src="/static/js/bootstrap.min.js"></script>
-
-  <!-- Plugin JavaScript -->
   <script src="/static/js/jquery.easing.min.js"></script>
-
-
   <script src="/static/js/classie.js"></script>
-
-  <!-- Contact Form JavaScript -->
   <script src="/static/js/jqBootstrapValidation.js"></script>
   <script src="/static/js/contact_me.js"></script>
-
-  <!-- Custom Theme JavaScript -->
   <script src="/static/js/knowitwall.js"></script>
-
-
   <!-- <script src="/static/js/audioplayer.js"></script> -->
   <script src="/static/js/circular_player.js"></script>
 
-
-  <!-- Sharethis.com: to make the social media buttons work -->
-  <!--
-  <script type="text/javascript">stLight.options({publisher: "08e3a3e8-abb1-434a-8ebb-df836483492f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-  <script>
-  var options={ "publisher": "08e3a3e8-abb1-434a-8ebb-df836483492f", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter"]}};
-  var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
-  </script>
--->
 
 <!-- share buttons-->
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -545,6 +513,17 @@
     {
         $( 'audio' ).audioPlayer();
     });
+  </script>
+  <script type="text/javascript">
+//   var width = window.innerWidth
+// || document.documentElement.clientWidth
+// || document.body.clientWidth;
+//
+// var height = window.innerHeight
+// || document.documentElement.clientHeight
+// || document.body.clientHeight;
+//   var element = document.getElementById("switching_audioplayers");
+// element.innerHTML = "New Header";
   </script>
 </body>
 {% endblock %}
