--- a/app/static/css/circular_player.css
+++ b/app/static/css/circular_player.css
@@ -9,16 +9,16 @@
 /* Centering */
 #circular_container, #circular_progress, #circular_player, #flip-back, .circular_cover, .playlist {
 	  position: absolute;
-	  margin-left: 20px;
+	  margin-left: 40px;
 	  top: 0;
 	  left: 0;
 	  right: 0;
   	bottom: 0;
 }
-
+/*The sizes for container/player/progress use to be: 320/300/328px*/
 #circular_container {
-	  width: 320px;
-	  height: 320px;
+	  width: 270px;
+	  height: 270px;
   perspective: 550px;
 	  -webkit-perspective: 550px;
   transform-style: preserve-3d;
@@ -26,8 +26,8 @@
 }
 
 #circular_player {
-  	width: 300px;
-	  height: 300px;
+  	width: 250px;
+	  height: 250px;
 	  background: #f333;
   	border-radius: 50%;
 	  overflow: hidden;
@@ -36,8 +36,8 @@
 }
 
 #circular_progress {
-	  width: 328px;
-	  height: 328px;
+	  width: 278px;
+	  height: 278px;
 	  z-index: 200;
   filter: blur(1px);
 	  -webkit-filter: blur(1px);
@@ -46,18 +46,6 @@
 		position: relative;
 		left: -14px;
 		top: -14px;
-}
-
-#flip-back {
-	  width: 300px;
-	  height: 300px;
-	  background: #313131;
-	  border: 4px solid #AEAEAE;
-	  border-radius: 50%;
-	  overflow: hidden;
-	  box-shadow: inset 0 -10px 10px -5px rgba(0,0,0,.3), 2px 2px 20px 0 rgba(0,0,0,.3); /* inner + outer */
-  transform: rotateY(-180deg);
-	  -webkit-transform: rotateY(-180deg);
 }
 
 /* Image */
@@ -114,7 +102,8 @@ button:hover {
 	  -webkit-transition: all .5s ease-in-out;
 		font-size: 1.3em;
 		position: relative;
-		right: 8px;
+		right: 27px;
+		bottom: 25px;
 	}
 #forward, #backward {
 	font-size: 1.3em;
@@ -123,6 +112,9 @@ button:hover {
 #remaining {
 	font-size: 24px;
 	font-weight: bold;
+	position: relative;
+	right: 18px;
+	bottom: 10px;
 }
 
 /* Volume */
