--- a/app/templates/circular_audiodoc.html
+++ b/app/templates/circular_audiodoc.html
@@ -330,9 +330,9 @@
     <div class="container previous-audiodoc">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center" style="padding-bottom: 20px;">
-          <p style="font-size:1.6em;">{{audiodocs[0].topic_description | safe}}</p>
-          <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
-          <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
+          <p class="audiodoc_abstact-bio">{{audiodocs[0].topic_description | safe}}</p>
+          <p class="audiodoc_narrate-credits">narrated by {{ audiodocs[0].narration_credits }}</p>
+          <p class="audiodoc_narrate-credits">music by {{ audiodocs[0].music_credits }}</p>
         </div>
       </div>
 
@@ -382,7 +382,7 @@
             </div>
             <div class="col-md-6">
               <div class="vertical-line">
-              <p > {{ audiodocs[0].author_bio | safe}} </p>
+              <p class="audiodoc_abstact-bio"> {{ audiodocs[0].author_bio | safe}} </p>
               </div>
             </div>
           </div>
