circ_test: time remaining to the left on iphone 5

--- a/app/static/css/circular_player.css
+++ b/app/static/css/circular_player.css
@@ -162,6 +162,11 @@ button:hover {
 		left: 37px;
 	}
 }
+@media(min-width:320px){
+	#remaining {
+		left: 57px;
+	}
+}
 /* Volume */
 input[type='range'] {
 	  display: block;
